--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ timezone:
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Chirpy                          # the main title
+title: Jaehyeon Han                         # the main title
 
 tagline: A text-focused Jekyll theme   # it will display as the sub-title
 
@@ -29,10 +29,10 @@ description: >-                        # used by seo meta and the atom feed
   A minimal, responsive, and powerful Jekyll theme for presenting professional writing.
 
 # fill in the protocol & hostname for your site, e.g., 'https://username.github.io'
-url: ''
+url: 'https://dev-jaehyeon.github.io'
 
 github:
-  username: github_username             # change to your github username
+  username: dev-jaehyeon             # change to your github username
 
 twitter:
   username: twitter_username            # change to your twitter username
