--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ timezone:
 
 title: Jaehyeon Han                         # the main title
 
-tagline: A text-focused Jekyll theme   # it will display as the sub-title
+tagline: Only Portfolio   # it will display as the sub-title
 
 description: >-                        # used by seo meta and the atom feed
   A minimal, responsive, and powerful Jekyll theme for presenting professional writing.
@@ -35,17 +35,17 @@ github:
   username: dev-jaehyeon             # change to your github username
 
 twitter:
-  username: twitter_username            # change to your twitter username
+  username:           # change to your twitter username
 
 social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
-  name: your_full_name
+  name: Jaehyeon Han
   email: example@doamin.com             # change to your email address
   links:
     # The first element serves as the copyright owner's link
-    - https://twitter.com/username      # change to your twitter homepage
-    - https://github.com/username       # change to your github homepage
+    - https://twitter.com      # change to your twitter homepage
+    - https://github.com/dev-jaehyeon       # change to your github homepage
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
     # - https://www.linkedin.com/in/username
@@ -73,7 +73,7 @@ google_analytics:
 #     light  - Use the light color scheme
 #     dark   - Use the dark color scheme
 #
-theme_mode:   # [light|dark]
+theme_mode: dark  # [light|dark]
 
 # The CDN endpoint for images.
 # Notice that once it is assigned, the CDN url
